Maven change to force a new jvm for each test.  This should clean up resources that are not closed by various miniclusters not releasing their resources (e.g. file handles).